fix(web-components): removed overflow visible on content-area
Removed data-overflow functionality due to content flashing outside of the dialog when hide/show is
used

--- a/packages/web-components/src/components/ic-dialog/ic-dialog.css
+++ b/packages/web-components/src/components/ic-dialog/ic-dialog.css
@@ -83,18 +83,7 @@
   scrollbar-width: none;
   padding: 0 var(--ic-space-xs);
   margin: 0 calc(-1 * var(--ic-space-xs));
-}
-
-:host([data-overflow="false"]) .content-area {
-  overflow-y: visible;
-}
-
-:host([data-overflow="true"]) .content-area {
-  overflow-y: scroll;
-}
-
-:host([data-overflow="false"]) .dialog {
-  overflow: visible;
+  overflow-y: auto;
 }
 
 .content-area::-webkit-scrollbar {
